# common-core

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  libft.tar.xz  linked_list.c  list_contacts.c
Born2beroot/: monitoring.sh  steps.txt
Libft/: Libft.txt  Makefile  ft_isalpha.c
ft_printf/: Makefile  evaluation.html  ft_flag-convertions.c  ft_printf-conversion-numeric.c  ft_printf-conversion-numeric_bonus.c  ft_printf-conversion-precision.c  ft_printf-conversion-sign.c  ft_printf-conversion-sign_bonus.c  ft_printf-conversion.c  ft_printf-conversion_bonus.c  ft_printf-decimal.c  ft_printf-hex.c  ft_printf-large.c  ft_printf-small.c  ft_printf.c  ft_printf.h  ft_printf_bonus.h  ftprintf-conversion-sign.c  main-DO-NOT-DELIVER.c  main-test.c
ft_printf/0tests/: tester  (+1 more)
get_next_line/: get_next_line.c  get_next_line.h  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils.c  get_next_line_utils_bonus.c  l.txt  main-DO-NOT-DELIVER  main-DO-NOT-DELIVER.c
libft/: Libft.txt  Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isacii.c  ft_isalnum.c  ft_isalpha.c  ft_isalpha_copy.c  ft_isascii.c  ft_itoa.c  ft_lstclear.c  ft_lstmap.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_substr.c  ft_test-libft.c  ft_toupper.c  libft.h  main_test.c  temp.c  test-libft  test.c
pipex/: Makefile  pipex.c
push_swap/: Makefile  push_swap.c  push_swap.h
(+11 files in other folders)
